load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["approval.go"],
    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager/subjectaccessreview",
    visibility = ["//pkg:__subpackages__"],
    deps = [
        "//pkg/apis/certmanager:go_default_library",
        "//pkg/internal/api/validation:go_default_library",
        "//pkg/internal/apis/certmanager:go_default_library",
        "//pkg/internal/apis/certmanager/util:go_default_library",
        "@io_k8s_api//admission/v1:go_default_library",
        "@io_k8s_api//authorization/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/authorization/v1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
